--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ dj-database-url = "*"
 wh = "*"
 whitenoise = "*"
 django-environ = "*"
+django-crispy-forms = "*"
 
 [requires]
 python_version = "3.6"
