--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ django-crispy-forms = "*"
 django-debug-toolbar = "*"
 uwsgi = "*"
 collectfast = "*"
+boltons = "*"
 
 [requires]
 python_version = "3.6"
